confirmacao upd
