# src/docs/swagger.json
@@ -4545,6 +4545,180 @@
         }
       }
     },
+    "/gpt/v2/confirmacao/prompt/intencao-presenca": {
+      "post": {
+        "summary": "Confirmação - Prompt - Intenção de Presença",
+        "description": "Recebe a intenção do usuário e retorna a resposta da IA",
+        "tags": [
+          "GPT V2 - Confirmação"
+        ],
+        "requestBody": {
+          "content": {
+            "application/x-www-form-urlencoded": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "leads[add][0][id]": {
+                    "type": "string",
+                    "example": "19030890",
+                    "description": "ID do lead"
+                  },
+                  "leads[add][0][status_id]": {
+                    "type": "string",
+                    "example": "73195524",
+                    "description": "ID do status do lead"
+                  },
+                  "leads[add][0][pipeline_id]": {
+                    "type": "string",
+                    "example": "8933063",
+                    "description": "ID do pipeline do lead"
+                  },
+                  "leads[status][0][id]": {
+                    "type": "string",
+                    "default": "",
+                    "description": "ID do lead (Quando executado via movimentação de status)"
+                  },
+                  "leads[status][0][status_id]": {
+                    "type": "string",
+                    "default": "",
+                    "description": "ID do status do lead (Quando executado via movimentação de status)"
+                  },
+                  "leads[status][0][pipeline_id]": {
+                    "type": "string",
+                    "default": "",
+                    "description": "ID do pipeline do lead (Quando executado via movimentação de status)"
+                  },
+                  "leads[status][0][old_status_id]": {
+                    "type": "string",
+                    "default": "",
+                    "description": "ID do status antigo do lead (Quando executado via movimentação de status)"
+                  },
+                  "leads[status][0][old_pipeline_id]": {
+                    "type": "string",
+                    "default": "",
+                    "description": "ID do pipeline antigo do lead (Quando executado via movimentação de status)"
+                  },
+                  "account[id]": {
+                    "type": "string",
+                    "example": "32000011",
+                    "description": "ID da conta"
+                  },
+                  "account[subdomain]": {
+                    "type": "string",
+                    "example": "kommoagendamento",
+                    "description": "Subdomínio da conta"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Intenção recebida com sucesso"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/gpt/v2/confirmacao/assistant/YXNzdF9qeDlCWlMxdEJUMHhoRk5jemtSSEVBOTA/confirmar-presenca": {
+      "post": {
+        "summary": "Confirmação - Assistente - Esteira de Confirmação 24 horas - 1ª Tentativa",
+        "description": "Envia mensagem do assistente para o lead",
+        "tags": [
+          "GPT V2 - Confirmação"
+        ],
+        "requestBody": {
+          "content": {
+            "application/x-www-form-urlencoded": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "leads[add][0][id]": {
+                    "type": "string",
+                    "example": "19030890",
+                    "description": "ID do lead"
+                  },
+                  "leads[add][0][status_id]": {
+                    "type": "string",
+                    "example": "73195524",
+                    "description": "ID do status do lead"
+                  },
+                  "leads[add][0][pipeline_id]": {
+                    "type": "string",
+                    "example": "8933063",
+                    "description": "ID do pipeline do lead"
+                  },
+                  "leads[status][0][id]": {
+                    "type": "string",
+                    "default": "",
+                    "description": "ID do lead (Quando executado via movimentação de status)"
+                  },
+                  "leads[status][0][status_id]": {
+                    "type": "string",
+                    "default": "",
+                    "description": "ID do status do lead (Quando executado via movimentação de status)"
+                  },
+                  "leads[status][0][pipeline_id]": {
+                    "type": "string",
+                    "default": "",
+                    "description": "ID do pipeline do lead (Quando executado via movimentação de status)"
+                  },
+                  "leads[status][0][old_status_id]": {
+                    "type": "string",
+                    "default": "",
+                    "description": "ID do status antigo do lead (Quando executado via movimentação de status)"
+                  },
+                  "leads[status][0][old_pipeline_id]": {
+                    "type": "string",
+                    "default": "",
+                    "description": "ID do pipeline antigo do lead (Quando executado via movimentação de status)"
+                  },
+                  "account[id]": {
+                    "type": "string",
+                    "example": "32000011",
+                    "description": "ID da conta"
+                  },
+                  "account[subdomain]": {
+                    "type": "string",
+                    "example": "kommoagendamento",
+                    "description": "Subdomínio da conta"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Mensagem enviada e recebida com sucesso"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
     "/gpt/v2/confirmacao/assistant/YXNzdF9qeDlCWlMxdEJUMHhoRk5jemtSSEVBOTA/24h-1st-try": {
       "post": {
         "summary": "Confirmação - Assistente - Esteira de Confirmação 24 horas - 1ª Tentativa",
