# src/routes/gpt/v2/confirmacao/prompt/index.js
@@ -15,4 +15,6 @@ router.get('/', (req, res) => {
 // BOT CONFIRMAÇÃO
 router.post('/intencao', Confirmacao.intencao);
 
+router.post('/intencao-presenca', Confirmacao.intencao_presenca);
+
 export default router;
